# pjy

./: .gitignore  README.md  app.py  launcher.py  pyproject.toml  后勤库房--所有供货商2018年-2025年供货系统原始明细表.xlsx
.github/workflows/: windows-build.yml
assets/fonts/: README.md
output/: 供应商年度分析结果.xlsx  表A_供应商年度汇总.csv  表B_年度总览.csv  表C_年度金额环比_排除指定供应商.csv
scripts/: build_windows.ps1
src/: __init__.py  analysis.py  charts.py  cli.py  config.py  exports.py  io_parser.py  launcher.py  reporting.py  transform.py  web_app.py
tests/: test_cli_launcher.py  test_reporting.py  test_transform.py
