[project]
name = "supplier-analysis"
version = "0.1.0"
description = "Local supplier yearly analytics web app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "openpyxl>=3.1.5",
  "pandas>=2.2.3",
  "kaleido>=1.1.0",
  "plotly>=5.24.1",
  "reportlab>=4.2.5",
  "streamlit>=1.41.1",
]

[project.scripts]
supplier-analysis = "src.cli:main"
supplier-analysis-launcher = "src.launcher:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
  "pyinstaller>=6.16.0",
  "pypdf>=5.9.0",
  "pytest>=8.3.4",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
